Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
   <body>
     <main class="main">
+      <img
+        src="./images/pika.jpg"
+        alt="Pika"
+        class="pika"
+        style="max-width: 500px;"
+      />
       <h1 class="section__title2" data-aos="fade-down" data-aos-duration="2000">
         Ciao Enza
       </h1>
@@ -33,9 +39,44 @@
         <br />
         Ti Voglio Bene!
         <br />
-        <br />
-        <i class="fa fa-heart" style="font-size: 48px; color: red;"></i>
+        <img src="./images/pika2.jpg" alt="Pika2" width="150px" />
       </h4>
+      <br />
+      <div class="wrapper" style="display: none;">
+        <div class="pikachu">
+          <span class="head">
+            <span class="ears left brown">
+              <span class="ears-inside yellow"></span>
+            </span>
+            <span class="ears right brown">
+              <span class="ears-inside yellow"></span>
+            </span>
+
+            <span class="face yellow">
+              <span class="eye left brown"></span>
+              <span class="eye right brown"></span>
+              <span class="mouth">w</span>
+
+              <span class="cachete left"></span>
+              <span class="cachete right"></span>
+            </span>
+          </span>
+
+          <div class="body yellow">
+            <div class="heart"></div>
+
+            <div class="paw left yellow"></div>
+            <div class="paw right yellow"></div>
+          </div>
+
+          <div class="leg left yellow-dark"></div>
+          <div class="leg right yellow-dark"></div>
+
+          <div class="tail yellow-dark"></div>
+        </div>
+      </div>
+      <!--<i class="fa fa-heart" style="font-size: 48px; color: red;"></i>-->
+
       <br />
       <br />
       <br />
@@ -94,8 +135,13 @@
           <a href="#x" class="overlay" id="win2"></a>
           <div class="popup">
             <h2>Ecco il tuo regalo</h2>
+
             <div class="pic-right">
-              <img src="./images/gift.jpg" />
+              <img
+                src="./images/gift.jpg"
+                class="pika"
+                style="max-width: 400px;"
+              />
             </div>
             <div align="center">
               <p>
