Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         timidezza nei rapporti, quindi credo che questo sia il modo più facile,
         oltre che il più particolare, che ho per augurarti buone feste e farti
         un regalo (so strano, lo so...) <br /><br />
-        Mi trovo veramente bene con te e questo non mi capita spesso, il tutto
-        lo si può riassumere in 3 parole: <br />
+        Ti conosco da poco, ma mi trovo veramente bene con te e questo non mi
+        capita spesso, il tutto lo si può riassumere in 3 parole: <br />
         <br />
         Ti Voglio Bene!
         <br />
