Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         timidezza nei rapporti, quindi credo che questo sia il modo più facile,
         oltre che il più particolare, che ho per augurarti buone feste e farti
         un regalo (so strano, lo so...) <br /><br />
-        Ti conosco da poco, ma mi trovo veramente bene con te e questo non mi
+        Ti conosco da poco, ma mi trovo veramente bene con te e questo non
         capita spesso, il tutto lo si può riassumere in 3 parole: <br />
         <br />
         Ti Voglio Bene!
