Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         Ti Voglio Bene!
         <br />
         <img src="./images/pika2.jpg" alt="Pika2" width="150px" />
+        <br />
+        <img
+          src="./images/down.png"
+          alt="down"
+          height="75px"
+          style="margin-top: -25px;"
+        />
       </h4>
       <br />
       <div class="wrapper" style="display: none;">
