Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         class="pika"
         style="max-width: 500px;"
       />
+      <img
+        style="float: right; margin-right: 50px;"
+        src="images/mew.png"
+        width="100px"
+      />
       <h1 class="section__title2" data-aos="fade-down" data-aos-duration="2000">
         Ciao Enza
       </h1>
@@ -148,7 +153,14 @@
           <a href="#x" class="overlay" id="win2"></a>
           <div class="popup">
             <h2>Ecco il tuo regalo</h2>
+            <!--  
+            <div class="circle-big" style="background-color: white;"></div>
 
+            <div class="circle"></div>
+            <div class="circle-small"></div>
+            <div class="circle-inner-inner"></div>
+            <div class="circle-inner"></div>
+          -->
             <div class="pic-right">
               <img
                 src="./images/gift.jpg"
