Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="styles/main.css" />
     <script>
       alert("Attiva l'audio!");
-      window.onload = function () {
+      /*window.onload = function () {
         document.getElementById("my_audio").play();
-      };
+      };*/
     </script>
   </head>
 
   <body>
-    <audio id="my_audio" src="images/poke.mp3" loop="loop"></audio>
+    <audio autoplay id="my_audio" src="images/poke.mp3" loop="loop"></audio>
     <main class="main">
       <img
         src="./images/pika.jpg"
