Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         <br />
         <br />
-        <audio id="myAudio" src="images/poke.mp3" preload="auto"></audio>
+        <audio id="myAudio" src="images/poke.mp3" preload="auto" loop></audio>
         <button
           style="border: 0; background: transparent; float: right;"
           onclick="playSound();"
