Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
                 >Enza!
                 <i class="fa fa-heart" style="font-size: 48px; color: red;"></i>
                 <span>
-                  <a class="present__name_link" href="#win2"
-                    >Scopri il regalo</a
-                  >
+                  <a class="present__name_link" href="#win2">&nbsp;Tocca qui</a>
                 </span>
               </span>
             </p>
