Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         <br />
         Ti Voglio Bene!
         <br />
+        <br />
+        Anche senza regali materiali io il mio regalo di Natale l'ho già
+        ricevuto... Ho conosciuto te!
+        <br />
+        <br />
         <img src="./images/pika2.jpg" alt="Pika2" width="150px" />
         <br />
         <img
