Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
 
-  <body>
+  <body
+    style="
+      background-image: url(./images/pngegg.png);
+      background-size: contain;
+      background-blend-mode: multiply;
+    "
+  >
     <main class="main">
       <div class="popupInitial" align="center" id="popIni">
         <p
@@ -70,26 +76,48 @@
         src="images/mew.png"
         width="100px"
       />
-      <h1 class="section__title2" data-aos="fade-down" data-aos-duration="2000">
+      <h1
+        style="
+          text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000,
+            1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+        "
+        class="section__title2"
+        data-aos="fade-down"
+        data-aos-duration="2000"
+      >
         Ciao Enza
       </h1>
-      <h4 class="present__text2" data-aos="fade-down" data-aos-duration="2000">
+      <h4
+        style="
+          text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000,
+            1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+        "
+        class="present__text2"
+        data-aos="fade-down"
+        data-aos-duration="2000"
+      >
         Uso questo metodo, a me più consono, per farti i miei auguri. <br />
         Parlo tanto e faccio lo stupido per nascondere la mia goffaggine e
         timidezza nei rapporti, quindi credo che questo sia il modo più facile,
         oltre che il più particolare, che ho per augurarti buone feste e farti
         un regalo (so strano, lo so...) <br /><br />
-        Ti conosco da poco, ma mi trovo veramente bene con te e questo non
+        Ti conosco da poco, ma mi trovo veramente bene con te e questo non mi
         capita spesso, il tutto lo si può riassumere in 3 parole: <br />
         <br />
         Ti Voglio Bene!
+        <img
+          src="./images/pika-heart.png"
+          alt="PikaLove"
+          width="80px"
+          style="margin-top: -15px; vertical-align: middle;"
+        />
         <br />
         <br />
-        Anche senza regali materiali io il mio regalo di Natale l'ho già
+        Anche senza regali materiali, io il mio regalo di Natale l'ho già
         ricevuto... Ho conosciuto te!
         <br />
         <br />
-        <img src="./images/pika2.jpg" alt="Pika2" width="150px" />
+        <img src="./images/pika2.png" alt="Pika2" width="150px" />
         <br />
         <img
           src="./images/down.png"
@@ -153,8 +181,11 @@
       <br />
       <br />
       <br />
+      <br />
+      <br />
       <section class="section">
         <div class="container">
+          <br />
           <br />
           <br />
           <br />
